--- a/home.css
+++ b/home.css
@@ -15,6 +15,19 @@ span{
   
 }
 
+.main{
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+
+main{
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 span:hover{
   background-color: #cccccc4d;
   border: 1px solid rgba(255, 255, 255, 0.658);
@@ -161,34 +174,8 @@ menu{
  }
 
 
- /* página contatos */
+
 
  
-/* página agenda */
 
-.agenda{
-    padding-bottom: 10px;
-}
 
-.aviso{
-  text-align: center;
-  color: #ccc;
-  font-size: 20px;
-  padding-top: 15px;
-  padding-bottom: 25px;
-  
-}
-
-table{
-  color: #ccc;
-  border: 1px solid white;
-  width: 300px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: rgba(128, 128, 128, 0.349);
-}
-
-td{
-  border: 1px solid white;
-}
